<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rvCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:layout_margin="10dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="30dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:id="@+id/tvNombreDeuda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/nombre_de_la_deuda"/>
            <TextView
                android:id="@+id/tvValorDeuda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/valor_de_la_deuda"/>
            <TextView
                android:id="@+id/tvValorMensual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/valor_mensual"/>
            <TextView
                android:id="@+id/tvValorCuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/valor_de_la_cuota"/>
            <TextView
                android:id="@+id/tvFechaPago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/fecha_de_vencimiento"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEdit"
                android:backgroundTint="@color/font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textAllCaps="true"
                android:text="Editar"
                style="@style/Widget.Material3.Button.TonalButton"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDeleteItem"
                android:backgroundTint="@color/rojo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="Eliminar"
                style="@style/Widget.Material3.Button.TonalButton"
                />
        </LinearLayout>
    </LinearLayout>



</com.google.android.material.card.MaterialCardView>