<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:gravity="center_horizontal"
    tools:context=".vistas.AddFragment"
    android:background="@color/black"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar_deuda"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tflNombreDeuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/nombre_de_la_deuda"
            android:layout_marginTop="50dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombreDeuda"
                android:textColorHint="@color/white"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tflValorTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/valor_de_la_deuda"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etValorTotal"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tflValorMensual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/valor_mensual"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etValorMensual"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tflValorCuota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/valor_de_la_cuota"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etValorCuota"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tflFechaPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/fecha_de_vencimiento"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFechaPago"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:text="Guardar"
            />
    </LinearLayout>



</LinearLayout>