<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/black"
    android:gravity="center_horizontal"
    tools:context=".vistas.AddFragment"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modificar_deuda"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNewNombreDeuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/nombre_de_la_deuda"
            android:textColorHint="@color/white"
            android:layout_marginTop="50dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewNombreDeuda"
                android:textColorHint="@color/white"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNewValorTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/valor_de_la_deuda"
            android:textColorHint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewValorTotal"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNewValorMensual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/valor_mensual"
            android:textColorHint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewValorMensual"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNewCantidadCuota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/cantidad_de_cuotas"
            android:textColorHint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewCantidadCuota"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNewFechaPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/fecha_de_vencimiento"
            android:textColorHint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewFechaPago"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>



</LinearLayout>