<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo2"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/redondo"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/tvIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="5dp"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="24sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tflPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="25sp"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btniniciarsesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/bt_iniciarsesion"
            android:text="@string/iniciar_sesion"
            android:textAllCaps="true"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize"

            />

        <Button
            android:id="@+id/btnRegUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/bt_iniciarsesion"
            android:text="@string/registro_user"
            android:textAllCaps="true"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize"

            />
    </LinearLayout>

</LinearLayout>